--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepack": "bob build",
     "test": "jest --passWithNoTests",
     "typecheck": "npm run generate:docs && tsc --noEmit",
-    "release": "release-it"
+    "release": "release-it --ci"
   },
   "author": "jdf2e",
   "license": "MIT",
