--- a/demo/package.json
+++ b/demo/package.json
@@ -12,20 +12,20 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
-    "expo": "~47.0.8",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "expo": "48.0.18",
+    "expo-linear-gradient": "^12.1.2",
+    "expo-status-bar": "^1.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-web": "~0.18.9",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@expo/webpack-config": "^0.16.24",
+    "@expo/webpack-config": "^18.1.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "babel-loader": "^8.1.0",
