--- a/demo/package.json
+++ b/demo/package.json
@@ -10,16 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "expo": "48.0.19",
-    "expo-linear-gradient": "^12.1.2",
-    "expo-status-bar": "^1.4.4",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-status-bar": "~1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.71.8",
+    "react-native": "0.71.14",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
     "resize-observer-polyfill": "^1.5.1"
   },
